# trade

./: .env  APIException.h  BitMEXHFTBot.cpp  BitMEXHFTBot.h  CMakeLists.txt  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  RateLimiter.cpp  RateLimiter.h  TradingRules.cpp  TradingRules.h  bitmex_hft_bot.py  c_cpp_properties.json  config.env  main.cpp  python_bindings.cpp  readme.md  requirements.txt  wrapped.py
.gitignore/: config.env
